--- a/Boostrap/2-3.maquetación/Ejercicio3/index.html
+++ b/Boostrap/2-3.maquetación/Ejercicio3/index.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-        <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="row order-md-1 order-sm-1 order-xs-1">
-            <div class="col green">HEADER</div>
+      <div class="row">
+        <div class="col green">HEADER</div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6 offset-lg-3 blue">1</div>
+        <div class="col-lg-3 col-md-3 col-sm-6 blue">2</div>
+        <div class="col d-none d-lg-block"></div>
+        <div class="col-lg-3 col-md-3 col-sm-6 offset-lg blue">3</div>
+        <div class="col-lg-3 col-md-3 col-sm-6 offset-lg-6 blue">4</div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-md-block d-lg-none cyan">Tablet</div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-6 order-lg-4 grey">a</div>
+        <div class="col-lg-3 col-md-3 col-sm-6 order-lg-3 grey">b</div>
+        <div class="col-lg-3 col-md-3 col-sm-6 order-lg-2 grey">c</div>
+        <div class="col-lg-3 col-md-3 col-sm-6 order-lg-1 grey">d</div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block cyan">Desktop</div>
+        <div class="col d-md-none cyan">Mobile</div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-6 offset-lg-3 d-none d-md-block salmon">
+          :(
         </div>
-        <div class="row order-md-2 order-sm-2 order-xs-2">
-            <div class="col-md-3 col-sm-3 col-xs-6 offset-md-3 blue">1</div>
-            <div class="col-md-3 col-sm-3 col-xs-6 blue">2</div>
-            <div class="col d-none d-md-block"></div>
-            <div class="col-md-3 col-sm-3 col-xs-6 offset-md blue">3</div>
-            <div class="col-md-3 col-sm-3 col-xs-6 offset-md-6 blue">4</div>
-        </div>
-        <div class="row order-md-3 order-sm-4 order-xs-3">
-            <div class="col-md-3 col-sm-3 col-xs-6 order-md-4 grey">a</div>
-            <div class="col-md-3 col-sm-3 col-xs-6 order-md-3 grey">b</div>
-            <div class="col-md-3 col-sm-3 col-xs-6 order-md-2 grey">c</div>
-            <div class="col-md-3 col-sm-3 col-xs-6 order-md-1 grey">d</div>
-        </div>
-        <div class="row order-md-4 order-sm-3 order-xs-4">
-            <div class="col d-none d-md-block cyan">Desktop</div>
-            <div class="col d-md-none d-xs-none d-sm-block cyan">Tablet</div>
-            <div class="col d-md-none d-sm-none d-xs-block cyan">Mobile</div>
-        </div>
-        <div class="row order-md-5 order-sm-5 order-xs-5">
-            <div class="col-md-3 col-xs-6 offset-md-3 salmon">:(</div>
-            <div class="col-md-3  col-xs-6 salmon">:D</div>
-        </div>
-        <div class="row order-md-6 order-sm-6 order-xs-6">
-            <div class="col green">FOOTER</div>
-        </div>
+        <div class="col-lg-3 col-md-6 salmon">:D</div>
+      </div>
+      <div class="row">
+        <div class="col green">FOOTER</div>
+      </div>
     </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
