--- a/2-Grid-actividades/ejercicio8_pseudoelementos/ejercicio8.html
+++ b/2-Grid-actividades/ejercicio8_pseudoelementos/ejercicio8.html
@@ -17,5 +17,8 @@
 		<h3 title="&#9773;">Icono</h3>
 
 	</section>
+
+	<input type="text" placeholder="Hola" class="prueba">
+	<button class="prueba2">Prueba</button>
 </body>
 </html>
